# feeders

./: README.md  feeders.cabal  stack.yaml
benchmarks/: benchmark.hs
src/Data/: Feeder.hs  Predator.hs
