name:                feeders
version:             0
-- synopsis:
-- description:
homepage:            https://github.com/fumieval/feeders#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Feeder
  build-depends:       base >= 4.7 && < 5, transformers, monad-skeleton
  default-language:    Haskell2010

benchmark benchmark
  type:           exitcode-stdio-1.0
  main-is:        benchmark.hs
  ghc-options:    -O2
  hs-source-dirs: benchmarks
  build-depends: base, criterion, pipes, machines, conduit, conduit-combinators, feeders
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/feeders
